feat: create a new PDP template

--- a/templates/product.BBG-July2022.liquid
+++ b/templates/product.BBG-July2022.liquid
@@ -1,4 +1,6 @@
-{% section 'product-template' %}
+{% section 'product-template-bbg' %}
+{% section 'product-text-image-1' %}
+{% section 'product-text-image-2' %}
 
 {% comment %}Start automatically added Judge.me widget{% endcomment %}
   <div class="page-width frequently-bought-together-selector">
