--- a/templates/product.ajax.liquid
+++ b/templates/product.ajax.liquid
@@ -4,3 +4,4 @@
 {% endcomment %}
 {% layout none %}
 {% section 'product-template' %}
+<div class="page-width frequently-bought-together-selector"></div>
