--- a/templates/product.sections.liquid
+++ b/templates/product.sections.liquid
@@ -1,3 +1,4 @@
 {% section 'product-sections-template' %}
+<div class="page-width frequently-bought-together-selector"></div>
 {% section 'product-recommendations' %}
 {% section 'product-collection-links' %}
