fix: tempalte stylings

--- a/assets/product-bbg-template-custom.css.liquid
+++ b/assets/product-bbg-template-custom.css.liquid
@@ -71,7 +71,34 @@
 .hr--medium {
     margin: 25px auto;
 }
+/* custom font */
+.product-single__title {
+    font-size: 22px;
+    letter-spacing: 0px;
+}
+.section-header__title {
+    font-size: 24px;
+    letter-spacing: 0px;
+}
+h4 {
+    font-size: 18px;
+    letter-spacing: 0px;
+}
+.product-bbg-metafield {
+    font-size: 13px;
+    letter-spacing: 0px;
+}
+@media (min-width: 590px) {
+    .product-single__title, .section-header__title {
+        font-size: 28px;
+    }
+}
+/* custom font */
 @media (max-width: 589px) {
+    .section-header__title {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
     .payment-buttons {
         justify-content: space-between;
     }
