--- a/sections/product-text-image-1.liquid
+++ b/sections/product-text-image-1.liquid
@@ -76,10 +76,20 @@
     .food-storage-intro .item-text {
         margin: 0;
     }
+    .food-storage-intro .section-header__title {
+        padding-top: 50px;
+    }
     .section-header__title {
         font-weight: 500;
     }
     @media (max-width: 589px) {
+        .food-storage-intro .item-title {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        .food-storage-intro .section-header__title {
+            padding-top: 20px;
+        }
         .food-storage-intro .flex, .food-storage-intro .flex-start {
             flex-direction: column;
         }
